--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -190,8 +190,8 @@
 								<li><a class="search-open" href="#" title="Search"><i class="zmdi zmdi-search"></i></a></li>
 								{% if user.id is not None %}
 								<li><a href="" title="My-Account"><i class="zmdi zmdi-account"></i></a>
-									{% if userprofile.wallet.wallet %}
-									{{userprofile.wallet.wallet}}
+									{% if userprofile.wallet %}
+									{{userprofile.wallet}}
 									{% else %}
 									0.00
 									{% endif %}
