--- a/shop/templates/single_product.html
+++ b/shop/templates/single_product.html
@@ -3,7 +3,14 @@
 {% block header%}{%include 'header.html'%}{%endblock%}
 {% block body %}
 			<!-- HEADING-BANNER START -->
-			<div class="heading-banner-area overlay-bg">
+			<div
+			class="bannu"
+			style="
+			  background-image: url('https://i.pinimg.com/564x/c8/8d/08/c88d08a83ec89eaf913205c61891f881.jpg');
+			  background-repeat: no-repeat;
+			  background-size: cover;
+			"
+			>
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
