--- a/user/templates/resetpassword.html
+++ b/user/templates/resetpassword.html
@@ -1,69 +1,77 @@
 {% extends "base.html" %}
 {% block body %}
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: 'Poppins', sans-serif;
-            background-color: #f0f0f0;
-        }
 
-        .card {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            text-align: center;
-        }
+<style>
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    font-family: "Poppins", sans-serif;
+    background-color: #f0f0f0;
+  }
 
-        h2 {
-            color: #333;
-        }
+  .card {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
+  }
 
-        p {
-            color: #666;
-            margin-bottom: 20px;
-        }
+  h2 {
+    color: #333;
+  }
 
-        .passInput {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            box-sizing: border-box;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
+  p {
+    color: #666;
+    margin-bottom: 20px;
+  }
 
-        button {
-            background-color: #007BFF;
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
+  .passInput {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+  }
 
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
-    <title>Forgot Password UI Using CSS - @code.scientist x @codingtorque</title>
-</head>
-<body>
-    <div class="card">
-        <h2>Forgot Password?</h2>
-        <p>You can reset your Password here</p>
-        <form action="{% url 'user:resetpassword'%}" method='POST'>
-            {% csrf_token %}
-        <input type="password" name="password" class="pass" placeholder="Creat password">
-        <input type="password" name="confirm_password" class="resetpass"  placeholder="Confirm Password">
-        <button type="submit">Send My Password</button>
-        </form>
-    </div>
-</body>
-</html>
+  button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+  button:hover {
+    background-color: #0056b3;
+  }
+</style>
+
+<div class="card">
+  <h2>Forgot Password?</h2>
+  <p>You can reset your Password here</p>
+  <form action="{% url 'user:resetpassword'%}" method="POST">
+    {% csrf_token %}
+    <input
+      type="password"
+      name="password"
+      class="pass"
+      placeholder="Creat password"
+    />
+    <input
+      type="password"
+      name="confirm_password"
+      class="resetpass"
+      placeholder="Confirm Password"
+    />
+    <button type="submit">Send My Password</button>
+  </form>
+</div>
+
 {% endblock %}
