--- a/order/templates/wishlist.html
+++ b/order/templates/wishlist.html
@@ -1,111 +1,128 @@
-
-{% extends "base.html" %}
-{% load static %}
-{% block header%}{%include 'header.html'%}{%endblock%}
+{% extends "base.html" %} 
+{% load static %} 
+{% block header%}
+{%include 'header.html'%}
+{%endblock%} 
 {% block body %}
 
+<div class="wrapper bg-dark-white">
+  <!-- HEADING-BANNER START -->
+  <div class="heading-banner-area overlay-bg">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="heading-banner">
+            <div class="heading-banner-title">
+              <h2>Shopping Wishlist</h2>
+            </div>
+            <div class="breadcumbs pb-15">
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li>Shopping Wishlist</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- HEADING-BANNER END -->
+  <!-- SHOPPING-CART-AREA START -->
+  <div class="shopping-cart-area pt-80 pb-80">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="shopping-cart">
+            <!-- Nav tabs -->
+            <ul class="cart-page-menu nav row clearfix mb-30">
+              <li><a href="{% url 'order:shopcart' %}">shopping cart</a></li>
+              <li>
+                <a class="active" href="{% url 'order:wishlist' %}">wishlist</a>
+              </li>
+              <li><a href="{% url 'order:checkout' %}">check out</a></li>
+              <li><a href="#order-complete">order complete</a></li>
+            </ul>
 
-        <div class="wrapper bg-dark-white">
-			<!-- HEADING-BANNER START -->
-			<div class="heading-banner-area overlay-bg">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="heading-banner">
-								<div class="heading-banner-title">
-									<h2>Shopping Wishlist</h2>
-								</div>
-								<div class="breadcumbs pb-15">
-									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li>Shopping Wishlist</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- HEADING-BANNER END -->
-			<!-- SHOPPING-CART-AREA START -->
-			<div class="shopping-cart-area  pt-80 pb-80">
-				<div class="container">	
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="shopping-cart">
-								<!-- Nav tabs -->
-								<ul class="cart-page-menu nav row clearfix mb-30">
-									<li><a href="{% url 'order:shopcart' %}">shopping cart</a></li>
-									<li><a class="active" href="{% url 'order:wishlist' %}">wishlist</a></li>
-									<li><a href="{% url 'order:checkout' %}" >check out</a></li>
-									<li><a href="#order-complete">order complete</a></li>
-								</ul>
+            <!-- wishlist start -->
+            <div class="tab-pane">
+              <div class="shop-cart-table">
+                <div class="table-content table-responsive">
+                  <table>
+                    <thead>
+                      <tr>
+                        <th class="product-thumbnail">Product</th>
+                        <th class="product-price">Price</th>
+                        <th class="product-stock">stock status</th>
+                        <th class="product-add-cart">Add to cart</th>
+                        <th class="product-remove">Remove</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      {% for pro in wishlistitem %}
+                      <form
+                        action="{% url 'order:addtocart' pro.product.id %}?size_id={{ pro.product.size.first.id }}"
+                        method="post"
+                        class="cart"
+                      >
+                        {% csrf_token %}
+                        <tr>
+                          <td class="product-thumbnail text-left">
+                            <!-- Single-product start -->
+                            <div class="single-product">
+                              <div class="product-img">
+                                <a href="single-product.html"
+                                  ><img
+                                    src="{{ pro.product.image.url }}"
+                                    alt=""
+                                /></a>
+                              </div>
+                              <div class="product-info">
+                                <h4 class="post-title">
+                                  <a class="text-light-black" href="#"
+                                    >{{pro.product.title}}</a
+                                  >
+                                </h4>
+                                <p class="mb-0">Color : Black</p>
+                                <p class="mb-0">Size : {{ pro.size }}</p>
+                              </div>
+                            </div>
+                            <!-- Single-product end -->
+                          </td>
+                          <td class="product-price">
+                            ${{pro.product.sale_price}}
+                          </td>
+                          <td class="product-stock">in stock</td>
 
+                          <td class="product-add-cart">
+                            <button type="submit">
+                              <a class="text-light-black"
+                                ><i class="zmdi zmdi-shopping-cart-plus"></i
+                              ></a>
+                            </button>
+                          </td>
 
-									<!-- wishlist start -->
-									<div class="tab-pane" >
-											<div class="shop-cart-table">
-												<div class="table-content table-responsive">
-													<table>
-														<thead>
-															<tr>
-																<th class="product-thumbnail">Product</th>
-																<th class="product-price">Price</th>
-																<th class="product-stock">stock status</th>
-																<th class="product-add-cart">Add to cart</th>
-																<th class="product-remove">Remove</th>
-															</tr>
-														</thead>
-														<tbody>
-                                                            {% for pro in wishlistitem %}
-															<form action="{% url 'order:addtocart' pro.product.id %}?size_id={{ pro.product.size.first.id }}" method="post" class="cart">
-																{% csrf_token %}
-															<tr>
-																<td class="product-thumbnail  text-left">
-																	<!-- Single-product start -->
-																	<div class="single-product">
-																		<div class="product-img">
-																			<a href="single-product.html"><img src="{{ pro.product.image.url }}" alt="" /></a>
-																		</div>
-																		<div class="product-info">
-																			<h4 class="post-title"><a class="text-light-black" href="#">{{pro.product.title}}</a></h4>
-																			<p class="mb-0">Color :  Black</p>
-																			<p class="mb-0">Size : {{ pro.size }}</p>
-																		</div>
-																	</div>
-																	<!-- Single-product end -->				
-																</td>
-																<td class="product-price">${{pro.product.sale_price}}</td>
-																<td class="product-stock">in stock</td>
-	
-																<td class="product-add-cart">
-																		<button type="submit"> 
-																		<a class="text-light-black"><i class="zmdi zmdi-shopping-cart-plus"></i></a>
-																		</button>  
-																</td>
-																
-																<td class="product-remove">
-																	<a href="#"><i class="zmdi zmdi-close"></i></a>
-																</td>
-															</tr>
-														</form>
-                                                            {% endfor %}
-														</tbody>
-													</table>
-												</div>
-											</div>								
-									</div>
-									<!-- wishlist end -->
-		
+                          <td class="product-remove">
+                            <a href="#"><i class="zmdi zmdi-close"></i></a>
+                          </td>
+                        </tr>
+                      </form>
+                      {% endfor %}
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            <!-- wishlist end -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- SHOPPING-CART-AREA END -->
+</div>
+<!-- WRAPPER END -->
 
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- SHOPPING-CART-AREA END -->
-		</div>
-		<!-- WRAPPER END -->
-
+{%endblock%} 
+{%block footer%}
+{%include 'footer.html'%}
 {%endblock%}
-{%block footer%}{%include 'footer.html'%}{%endblock%}
