--- a/user/templates/404.html
+++ b/user/templates/404.html
@@ -1,188 +1,300 @@
-{% extends "base.html" %}
-{% load static %}
-{% block header%}{%include 'header.html'%}{%endblock%}
+{% extends "base.html" %} 
+{% load static %} 
+{% block header%}
+{%include 'header.html'%}
+{%endblock%} 
 {% block body %}
 
 <div class="heading-banner-area overlay-bg">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="heading-banner">
-                    <div class="heading-banner-title">
-                        <h2>404</h2>
-                    </div>
-                    <div class="breadcumbs pb-15">
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li>404</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="heading-banner">
+          <div class="heading-banner-title">
+            <h2>404</h2>
+          </div>
+          <div class="breadcumbs pb-15">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li>404</li>
+            </ul>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
-<!-- HEADING-BANNER END -->
+
 <!-- 404-AREA START -->
 <div class="area-404 pt-80 pb-80">
-    <div class="container">	
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="error-content text-center">
-                    <img src="img/bg/error.png" alt="" />
-                    <h4 class="text-light-black mt-60">Ooops.... Error 404</h4>
-                    <h5 class="text-light-black">Sorry, But the page you are looking for does't exist</h5>
-                    <div class="error-form mt-30 mb-30">
-                        <form action="#">
-                            <input type="text" placeholder="Search here..."/>
-                            <button type="submit"><i class="zmdi zmdi-search"></i></button>
-                        </form>
-                    </div>
-                    <p class="text-uppercase">Or</p>
-                    <a class="button-one submit-btn-4 go-to-home bg-white text-uppercase text-light-black" href="index.html" data-text="go to home page" >go to home page</a>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="error-content text-center">
+          <img src="img/bg/error.png" alt="" />
+          <h4 class="text-light-black mt-60">Ooops.... Error 404</h4>
+          <h5 class="text-light-black">
+            Sorry, But the page you are looking for does't exist
+          </h5>
+          <div class="error-form mt-30 mb-30">
+            <form action="#">
+              <input type="text" placeholder="Search here..." />
+              <button type="submit"><i class="zmdi zmdi-search"></i></button>
+            </form>
+          </div>
+          <p class="text-uppercase">Or</p>
+          <a
+            class="button-one submit-btn-4 go-to-home bg-white text-uppercase text-light-black"
+            href="index.html"
+            data-text="go to home page"
+            >go to home page</a
+          >
         </div>
+      </div>
     </div>
+  </div>
 </div>
-<!-- 404-AREA END -->		
+<!-- 404-AREA END -->
+
 <!-- FOOTER START -->
 <footer>
-    <!-- Footer-area start -->
-    <div class="footer-area footer-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-footer">
-                        <h3 class="footer-title  title-border">Contact Us</h3>
-                        <ul class="footer-contact">
-                            <li><span>Address :</span>28 Green Tower, Street Name,<br>New York City, USA</li>
-                            <li><span>Cell-Phone :</span>012345 - 123456789</li>
-                            <li><span>Email :</span>your-email@gmail.com</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="single-footer">
-                        <h3 class="footer-title  title-border">accounts</h3>
-                        <ul class="footer-menu">
-                            <li><a href="my-account.html"><i class="zmdi zmdi-dot-circle"></i>My Account</a></li>
-                            <li><a href="wishlist.html"><i class="zmdi zmdi-dot-circle"></i>My Wishlist</a></li>
-                            <li><a href="cart.html"><i class="zmdi zmdi-dot-circle"></i>My Cart</a></li>
-                            <li><a href="login.html"><i class="zmdi zmdi-dot-circle"></i>Sign In</a></li>
-                            <li><a href="checkout.html"><i class="zmdi zmdi-dot-circle"></i>Check out</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="single-footer">
-                        <h3 class="footer-title  title-border">shipping</h3>
-                        <ul class="footer-menu">
-                            <li><a href="#"><i class="zmdi zmdi-dot-circle"></i>New Products</a></li>
-                            <li><a href="#"><i class="zmdi zmdi-dot-circle"></i>Top Sellers</a></li>
-                            <li><a href="#"><i class="zmdi zmdi-dot-circle"></i>Manufactirers</a></li>
-                            <li><a href="#"><i class="zmdi zmdi-dot-circle"></i>Suppliers</a></li>
-                            <li><a href="#"><i class="zmdi zmdi-dot-circle"></i>Specials</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-footer newsletter-item">
-                        <h3 class="footer-title  title-border">Email Newsletters</h3>
-                        <div class="footer-subscribe">
-                            <form action="#">
-                                <input type="text" name="email" placeholder="Email Address..." />
-                                <button class="button-one submit-btn-4" type="submit" data-text="Subscribe">Subscribe</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  <!-- Footer-area start -->
+  <div class="footer-area footer-2">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-6">
+          <div class="single-footer">
+            <h3 class="footer-title title-border">Contact Us</h3>
+            <ul class="footer-contact">
+              <li>
+                <span>Address :</span>28 Green Tower, Street Name,<br />New York
+                City, USA
+              </li>
+              <li><span>Cell-Phone :</span>012345 - 123456789</li>
+              <li><span>Email :</span>your-email@gmail.com</li>
+            </ul>
+          </div>
         </div>
-    </div>
-    <!-- Footer-area end -->
-    <!-- Copyright-area start -->
-    <div class="copyright-area copyright-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="copyright">
-                        <p class="mb-0">&copy; <a href="https://themeforest.net/user/codecarnival/portfolio" target="_blank">CodeCarnival </a> 2022. All Rights Reserved.</p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="payment  text-md-end">
-                        <a href="#"><img src="img/payment/1.png" alt="" /></a>
-                        <a href="#"><img src="img/payment/2.png" alt="" /></a>
-                        <a href="#"><img src="img/payment/3.png" alt="" /></a>
-                        <a href="#"><img src="img/payment/4.png" alt="" /></a>
-                    </div>
-                </div>
-            </div>
+        <div class="col-lg-2 col-md-3 col-sm-6">
+          <div class="single-footer">
+            <h3 class="footer-title title-border">accounts</h3>
+            <ul class="footer-menu">
+              <li>
+                <a href="my-account.html"
+                  ><i class="zmdi zmdi-dot-circle"></i>My Account</a
+                >
+              </li>
+              <li>
+                <a href="wishlist.html"
+                  ><i class="zmdi zmdi-dot-circle"></i>My Wishlist</a
+                >
+              </li>
+              <li>
+                <a href="cart.html"
+                  ><i class="zmdi zmdi-dot-circle"></i>My Cart</a
+                >
+              </li>
+              <li>
+                <a href="login.html"
+                  ><i class="zmdi zmdi-dot-circle"></i>Sign In</a
+                >
+              </li>
+              <li>
+                <a href="checkout.html"
+                  ><i class="zmdi zmdi-dot-circle"></i>Check out</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
+        <div class="col-lg-2 col-md-3 col-sm-6">
+          <div class="single-footer">
+            <h3 class="footer-title title-border">shipping</h3>
+            <ul class="footer-menu">
+              <li>
+                <a href="#"><i class="zmdi zmdi-dot-circle"></i>New Products</a>
+              </li>
+              <li>
+                <a href="#"><i class="zmdi zmdi-dot-circle"></i>Top Sellers</a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i class="zmdi zmdi-dot-circle"></i>Manufactirers</a
+                >
+              </li>
+              <li>
+                <a href="#"><i class="zmdi zmdi-dot-circle"></i>Suppliers</a>
+              </li>
+              <li>
+                <a href="#"><i class="zmdi zmdi-dot-circle"></i>Specials</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="single-footer newsletter-item">
+            <h3 class="footer-title title-border">Email Newsletters</h3>
+            <div class="footer-subscribe">
+              <form action="#">
+                <input
+                  type="text"
+                  name="email"
+                  placeholder="Email Address..."
+                />
+                <button
+                  class="button-one submit-btn-4"
+                  type="submit"
+                  data-text="Subscribe"
+                >
+                  Subscribe
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- Copyright-area start -->
+  </div>
+  <!-- Footer-area end -->
+  <!-- Copyright-area start -->
+  <div class="copyright-area copyright-2">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="copyright">
+            <p class="mb-0">
+              &copy;
+              <a
+                href="https://themeforest.net/user/codecarnival/portfolio"
+                target="_blank"
+                >CodeCarnival
+              </a>
+              2022. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="payment text-md-end">
+            <a href="#"><img src="img/payment/1.png" alt="" /></a>
+            <a href="#"><img src="img/payment/2.png" alt="" /></a>
+            <a href="#"><img src="img/payment/3.png" alt="" /></a>
+            <a href="#"><img src="img/payment/4.png" alt="" /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Copyright-area start -->
 </footer>
 <!-- FOOTER END -->
+
 <!-- QUICKVIEW PRODUCT -->
 <div id="quickview-wrapper">
-   <!-- Modal -->
-   <div class="modal fade" id="productModal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                </div>
-                <div class="modal-body">
-                    <div class="modal-product">
-                        <div class="product-images">
-                            <div class="main-image images">
-                                <img alt="#" src="img/product/quickview-photo.jpg"/>
-                            </div>
-                        </div><!-- .product-images -->
+  <!-- Modal -->
+  <div class="modal fade" id="productModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button
+            type="button"
+            class="close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="modal-product">
+            <div class="product-images">
+              <div class="main-image images">
+                <img alt="#" src="img/product/quickview-photo.jpg" />
+              </div>
+            </div>
+            <!-- .product-images -->
 
-                        <div class="product-info">
-                            <h1>Aenean eu tristique</h1>
-                            <div class="price-box-3">
-                                <hr />
-                                <div class="s-price-box">
-                                    <span class="new-price">$160.00</span>
-                                    <span class="old-price">$190.00</span>
-                                </div>
-                                <hr />
-                            </div>
-                            <a href="shop.html" class="see-all">See all features</a>
-                            <div class="quick-add-to-cart">
-                                <form method="post" class="cart">
-                                    <div class="numbers-row">
-                                        <input type="number" id="french-hens" value="3" min="1">
-                                    </div>
-                                    <button class="single_add_to_cart_button" type="submit">Add to cart</button>
-                                </form>
-                            </div>
-                            <div class="quick-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla augue nec est tristique auctor. Donec non est at libero.
-                            </div>
-                            <div class="social-sharing">
-                                <div class="widget widget_socialsharing_widget">
-                                    <h3 class="widget-title-modal">Share this product</h3>
-                                    <ul class="social-icons">
-                                        <li><a target="_blank" title="Google +" href="#" class="gplus social-icon"><i class="zmdi zmdi-google-plus"></i></a></li>
-                                        <li><a target="_blank" title="Twitter" href="#" class="twitter social-icon"><i class="zmdi zmdi-twitter"></i></a></li>
-                                        <li><a target="_blank" title="Facebook" href="#" class="facebook social-icon"><i class="zmdi zmdi-facebook"></i></a></li>
-                                        <li><a target="_blank" title="LinkedIn" href="#" class="linkedin social-icon"><i class="zmdi zmdi-linkedin"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div><!-- .product-info -->
-                    </div><!-- .modal-product -->
-                </div><!-- .modal-body -->
-            </div><!-- .modal-content -->
-        </div><!-- .modal-dialog -->
-   </div>
-   <!-- END Modal -->
+            <div class="product-info">
+              <h1>Aenean eu tristique</h1>
+              <div class="price-box-3">
+                <hr />
+                <div class="s-price-box">
+                  <span class="new-price">$160.00</span>
+                  <span class="old-price">$190.00</span>
+                </div>
+                <hr />
+              </div>
+              <a href="shop.html" class="see-all">See all features</a>
+              <div class="quick-add-to-cart">
+                <form method="post" class="cart">
+                  <div class="numbers-row">
+                    <input type="number" id="french-hens" value="3" min="1" />
+                  </div>
+                  <button class="single_add_to_cart_button" type="submit">
+                    Add to cart
+                  </button>
+                </form>
+              </div>
+              <div class="quick-desc">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                fringilla augue nec est tristique auctor. Donec non est at
+                libero.
+              </div>
+              <div class="social-sharing">
+                <div class="widget widget_socialsharing_widget">
+                  <h3 class="widget-title-modal">Share this product</h3>
+                  <ul class="social-icons">
+                    <li>
+                      <a
+                        target="_blank"
+                        title="Google +"
+                        href="#"
+                        class="gplus social-icon"
+                        ><i class="zmdi zmdi-google-plus"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        target="_blank"
+                        title="Twitter"
+                        href="#"
+                        class="twitter social-icon"
+                        ><i class="zmdi zmdi-twitter"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        target="_blank"
+                        title="Facebook"
+                        href="#"
+                        class="facebook social-icon"
+                        ><i class="zmdi zmdi-facebook"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        target="_blank"
+                        title="LinkedIn"
+                        href="#"
+                        class="linkedin social-icon"
+                        ><i class="zmdi zmdi-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!-- .product-info -->
+          </div>
+          <!-- .modal-product -->
+        </div>
+        <!-- .modal-body -->
+      </div>
+      <!-- .modal-content -->
+    </div>
+    <!-- .modal-dialog -->
+  </div>
+  <!-- END Modal -->
 </div>
-<!-- END QUICKVIEW PRODUCT -->	
+<!-- END QUICKVIEW PRODUCT -->
 
 {%endblock%}
-      
