--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -1,55 +1,83 @@
-{% extends "base.html" %}
-{% load static %}
-{% block header%}{%include 'header.html'%}{%endblock%}
+{% extends "base.html" %} 
+{% load static %} 
+{% block header%}
+{%include 'header.html'%}
+{%endblock%}
 {% block body %}
 
-
-<div class="heading-banner-area overlay-bg">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="heading-banner">
-                    <div class="heading-banner-title">
-                        <h2>Registration</h2>
-                    </div>
-                    <div class="breadcumbs pb-15">
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li>Registration</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+<div
+  class="bannu"
+  style="
+    background-image: url('https://i.pinimg.com/564x/c8/8d/08/c88d08a83ec89eaf913205c61891f881.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  "
+  >
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="heading-banner">
+          <div class="heading-banner-title">
+            <h2>Registration</h2>
+          </div>
+          <div class="breadcumbs pb-15">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li>Registration</li>
+            </ul>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
-<!-- HEADING-BANNER END -->
-<!-- SHOPPING-CART-AREA START -->
-<div class="login-area  pt-80 pb-80">
-    <div class="container">
-        <form action="" method="POST">	
-            {% csrf_token %}
 
-            <div class="row">
+<div class="login-area pt-80 pb-80">
+  <div class="container">
+    <form action="" method="POST">
+      {% csrf_token %}
 
-                <div class="col-lg-12">
-                    <div class="customer-login text-left">
-                        <h4 class="title-1 title-border text-uppercase mb-30">new customers</h4>
-                        <p class="text-gray">If you have an account with us, Please login!</p>
-                        <input name='username' type="text" placeholder="Your name here..." name="name">
-                        <input name='email' type="text" placeholder="Email address here..." name="email">
-                        <input name='password1' type="password"  placeholder="Password">
-                        <input name='password2' type="password" placeholder="Confirm password">
-                        <p class="mb-0">
-                            <input type="checkbox" id="newsletter" name="newsletter" checked>
-                            <label for="newsletter"><span>Sign up for our newsletter!</span></label>
-                        </p>
-                        <button type="submit" data-text="regiter" class="button-one submit-button mt-15">regiter</button>
-                    </div>					
-                </div>
-            </div>
-        </form>
-    </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="customer-login text-left">
+            <h4 class="title-1 title-border text-uppercase mb-30">
+              new customers
+            </h4>
+            <p class="text-gray">
+              If you have an account with us, Please login!
+            </p>
+            <input
+              name="username"
+              type="text"
+              placeholder="Your name here..."
+              name="name"
+            />
+            <input
+              name="email"
+              type="text"
+              placeholder="Email address here..."
+              name="email"
+            />
+            <input name="password1" type="password" placeholder="Password" />
+            <input
+              name="password2"
+              type="password"
+              placeholder="Confirm password"
+            />
+            <p class="mb-0">
+            <button
+              type="submit"
+              data-text="regiter"
+              class="button-one submit-button mt-15"
+            >
+              regiter
+            </button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
-{%endblock%}
+
+{%endblock%} 
 {%block footer%}{%include 'footer.html'%}{%endblock%}
